Fix border radius still rounded on mobile

--- a/layouts/DefaultLayout.module.scss
+++ b/layouts/DefaultLayout.module.scss
@@ -28,6 +28,10 @@
   @include larger-than(1000px) {
     padding: 100px;
   }
+
+  @include smaller-than(1200px) {
+    border-radius: 0;
+  }
 }
 
 .firstRow {
